# elysian-legacy

./: .gitignore  2d.gltf  3d.gltf  Cargo.toml  README.md
crates/elysian-core/: Cargo.toml
crates/elysian-core/src/: expr.rs  identifier.rs  lib.rs  number.rs  property_identifier.rs  value.rs
crates/elysian-core/src/ast/: attribute.rs  central_diff_gradient.rs  combinator.rs  combine.rs  cross_section.rs  expand.rs  expr.rs  field.rs  filter.rs  mod.rs  modify.rs  number.rs  property_identifier.rs  raymarch.rs  select.rs  to_glam.rs  value.rs
crates/elysian-core/src/ast/alias/: capsule.rs  circle.rs  line.rs  ring.rs
crates/elysian-core/src/ast/combinator/: blend.rs  boolean.rs  mod.rs
crates/elysian-core/src/ast/combine/: blend.rs  boolean.rs  mod.rs
crates/elysian-core/src/ast/field/: capsule.rs  circle.rs  line.rs  mod.rs  point.rs  ring.rs
crates/elysian-core/src/ast/modify/: mod.rs
crates/elysian-core/src/ast/modify/post_modifier/: gradient_normals.rs  isosurface.rs  manifold.rs  mod.rs
crates/elysian-core/src/ast/modify/pre_modifier/: elongate.rs  mod.rs  translate.rs
crates/elysian-core/src/ast/post_modifier/: isosurface.rs  manifold.rs  mod.rs
crates/elysian-core/src/ast/pre_modifier/: elongate.rs  mod.rs  translate.rs
crates/elysian-core/src/ir/: as_ir.rs  from_elysian.rs  mod.rs
crates/elysian-core/src/ir/ast/: expr.rs  identifier.rs  mod.rs  property.rs  stmt.rs
crates/elysian-core/src/ir/ast/block/: into_block.rs  mod.rs  to_tokens.rs
crates/elysian-core/src/ir/ast/data/: matrix.rs  mod.rs  number.rs  structure.rs  value.rs  vector.rs
crates/elysian-core/src/ir/ast/data/number/: float.rs  mod.rs  sint.rs  to_tokens.rs  uint.rs
crates/elysian-core/src/ir/ast/data/structure/: mod.rs  to_tokens.rs
crates/elysian-core/src/ir/ast/data/value/: mod.rs  to_tokens.rs
crates/elysian-core/src/ir/ast/expr/: mod.rs  to_tokens.rs
crates/elysian-core/src/ir/ast/identifier/: mod.rs  to_tokens.rs
crates/elysian-core/src/ir/ast/stmt/: mod.rs  to_tokens.rs
crates/elysian-core/src/ir/ast/value/: into_value.rs  mod.rs  number.rs  structure.rs  type_spec.rs  vector.rs
crates/elysian-core/src/ir/module/: as_ir.rs  as_module.rs  domains.rs  function_definition.rs  hash_ir.rs  mod.rs  specialization_data.rs  struct_definition.rs  ty.rs
crates/elysian-core/src/ir/module/function_definition/: function_identifier.rs  mod.rs  property_identifier.rs
crates/elysian-core/src/ir/module/function_definition/function_identifier/: mod.rs  to_tokens.rs
crates/elysian-core/src/ir/module/function_definition/property_identifier/: mod.rs  to_tokens.rs
crates/elysian-core/src/ir/module/struct_definition/: mod.rs  struct_identifier.rs
crates/elysian-image/: Cargo.toml
crates/elysian-image/src/: lib.rs  main.rs
crates/elysian-ir/: Cargo.toml
crates/elysian-ir/src/: lib.rs
crates/elysian-ir/src/ast/: expr.rs  property.rs  stmt.rs
crates/elysian-ir/src/ast/block/: into_block.rs  mod.rs
crates/elysian-ir/src/ast/data/: matrix.rs  structure.rs  value.rs  vector.rs
crates/elysian-ir/src/module/: as_ir.rs  domains.rs  erased_hash.rs  evaluate.rs  mod.rs  properties.rs  specialization_data.rs  ty.rs
crates/elysian-ir/src/module/function_definition/: function_identifier.rs  mod.rs
crates/elysian-ir/src/module/struct_definition/: mod.rs  struct_identifier.rs
crates/elysian-mesh/: Cargo.toml
crates/elysian-mesh/src/: bounds.rs  dual_contour.rs  dual_graph.rs  evaluator.rs  face_centers.rs  gltf_export.rs  has_sign_change.rs  interpolate_cell.rs  lib.rs  marching_squares.rs  neighbours.rs  quad_tree.rs  sample.rs  subdivision_cell.rs  subdivision_tree.rs  tree.rs  util.rs  vector_space.rs
crates/elysian-mesh/src/gltf_export/: export_primitive.rs  export_primitives.rs  mod.rs  nodes.rs  point_primitive.rs  point_primitives.rs  points.rs  properties.rs  samples.rs  scenes.rs
crates/elysian-mesh/src/marching_cells/: corner.rs  corners.rs  edge.rs  edges.rs  face.rs  faces.rs  local_point.rs  march_primitive.rs  march_primitives.rs  marching_cubes.rs  marching_squares.rs  mod.rs  power_2_usize.rs  zero_point.rs
crates/elysian-mesh/src/subdivision_tree/: cell_indices.rs  face_centers.rs  mod.rs
crates/elysian-naga/: Cargo.toml
crates/elysian-naga/src/: lib.rs
crates/elysian-shapes/: Cargo.toml
crates/elysian-shapes/src/: central_diff_gradient.rs  color.rs  cross_section.rs  derive_bounding_error.rs  derive_support_vector.rs  elongate_basis.rs  filter.rs  lib.rs  mirror.rs  partition.rs  prepass.rs  raymarch.rs  rotate.rs  scale.rs  select.rs  shape.rs  uv_map.rs  voronoi.rs
crates/elysian-shapes/src/combine/: blend.rs  boolean.rs  builder.rs  displace.rs  mod.rs  overlay.rs  sided.rs
crates/elysian-shapes/src/combine/blend/: mod.rs  smooth_intersection.rs  smooth_subtraction.rs  smooth_union.rs
crates/elysian-shapes/src/combine/boolean/: intersection.rs  mod.rs  subtraction.rs  union.rs
crates/elysian-shapes/src/field/: arc.rs  capsule.rs  chebyshev.rs  circle.rs  corner.rs  infinity.rs  line.rs  mod.rs  point.rs  quad.rs  ring.rs
crates/elysian-shapes/src/modify/: mod.rs
crates/elysian-shapes/src/modify/post_modifier/: derive_support_vector.rs  distance_bound.rs  distance_color.rs  gradient_normals.rs  isosurface.rs  manifold.rs  mod.rs  set.rs  uv_map.rs
crates/elysian-shapes/src/modify/pre_modifier/: aspect.rs  basis_bound.rs  basis_mirror.rs  cartesian_to_polar.rs  elongate.rs  elongate_axis.rs  flip_basis.rs  mirror.rs  mod.rs  polar_to_cartesian.rs  repeat.rs  translate.rs
crates/elysian-shapes/src/wrap/: cross_section.rs  elongate_basis.rs  filter.rs  mirror.rs  mod.rs  rotate.rs  scale.rs
crates/elysian-static/: Cargo.toml
crates/elysian-static/src/: evaluator.rs  lib.rs
crates/elysian-syn/: Cargo.toml
crates/elysian-syn/src/: lib.rs  output.rs  static_shapes.rs
examples/: syn.rs
src/: lib.rs
testing/test-ascii/: Cargo.toml
testing/test-ascii/src/: main.rs
testing/test-image/: Cargo.toml  build.rs
testing/test-image/src/: main.rs
testing/test-shapes/: Cargo.toml
testing/test-shapes/src/: lib.rs
(+123 files in other folders)
