[package]
name = "elysian"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/*",
    "testing/*",
]

[features]
default = ["static", "image", "shadertoy"]
syn = ["dep:elysian-syn"]
static = ["syn", "dep:elysian-static"]
image = ["dep:elysian-image"]
naga = ["dep:elysian-naga"]
shadertoy = ["naga", "dep:elysian-shadertoy"]

[dependencies]
elysian-core = { path = "crates/elysian-core" }
elysian-macros = { path = "crates/elysian-macros" }

elysian-image = { path = "crates/elysian-image", optional = true }
elysian-syn = { path = "crates/elysian-syn", optional = true }
elysian-static = { path = "crates/elysian-static", optional = true }
elysian-naga = { path = "crates/elysian-naga", optional = true }
elysian-shadertoy = { path = "crates/elysian-shadertoy", optional = true }

rust-gpu-bridge = { path = "../bevy-rust-gpu-project/crates/rust-gpu-bridge" }

# Fast-compile config
[profile.dev]
opt-level = 0
overflow-checks = true
debug-assertions = true
debug = true
codegen-units = 16
lto = false
incremental = true

# Use opt level 3 for dependencies
[profile.dev.package."*"]
opt-level = 3

