[package]
name = "elysian"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/*",
    "testing/*",
]

[features]
default = ["text", "interpreter", "static", "image", "ascii", "mesh", "naga", "shadertoy"]
text = ["dep:elysian-text"]
syn = ["dep:elysian-syn"]
interpreter = ["dep:elysian-interpreter"]
static = ["syn", "dep:elysian-static"]
image = ["dep:elysian-image"]
ascii = ["dep:elysian-ascii"]
mesh = ["dep:elysian-mesh"]
naga = ["dep:elysian-naga"]
shadertoy = ["dep:elysian-shadertoy"]

[dependencies]
elysian-core = { path = "crates/elysian-core" }
elysian-ir = { path = "crates/elysian-ir" }
elysian-math = { path = "crates/elysian-math" }
elysian-proc-macros = { path = "crates/elysian-proc-macros" }
elysian-decl-macros = { path = "crates/elysian-decl-macros" }
elysian-shapes = { path = "crates/elysian-shapes" }

elysian-text = { path = "crates/elysian-text", optional = true }
elysian-image = { path = "crates/elysian-image", optional = true }
elysian-ascii = { path = "crates/elysian-ascii", optional = true }
elysian-mesh = { path = "crates/elysian-mesh", optional = true }
elysian-syn = { path = "crates/elysian-syn", optional = true }
elysian-interpreter = { path = "crates/elysian-interpreter", optional = true }
elysian-static = { path = "crates/elysian-static", optional = true }
elysian-naga = { path = "crates/elysian-naga", optional = true }
elysian-shadertoy = { path = "crates/elysian-shadertoy", optional = true }

# Fast-compile config
[profile.dev]
opt-level = 0
overflow-checks = true
debug-assertions = true
debug = true
codegen-units = 16
lto = false
incremental = true

# Use opt level 3 for dependencies
[profile.dev.package."*"]
opt-level = 3

