[package]
name = "elysian-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
internal = []

[dependencies]
rust-gpu-bridge = { path = "../../../bevy-rust-gpu-project/crates/rust-gpu-bridge", features = ["glam"] }
elysian-proc-macros = { path = "../elysian-proc-macros" }
elysian-decl-macros = { path = "../elysian-decl-macros" }

uuid = { version = "1.4.0", features = ["v4"] }
tracing = "0.1.37"
indexmap = "2.0.0"
linkme = "0.3.13"
