[package]
name = "elysian-image"
version = "0.1.0"
edition = "2021"

[dependencies]
elysian-core = { path = "../elysian-core" }
elysian-static = { path = "../elysian-static" }
elysian-shapes = { path = "../elysian-shapes" }
rust-gpu-bridge = { path = "../../../bevy-rust-gpu-project/crates/rust-gpu-bridge", features = ["glam"] }
image = "0.24.6"
tracing = "0.1.37"
rayon = "1.7.0"
num_cpus = "1.16.0"
