[package]
name = "elysian-image"
version = "0.1.0"
edition = "2021"

[features]
default = ["rayon"]
rayon = ["dep:rayon", "dep:num_cpus"]

[dependencies]
elysian-core = { path = "../elysian-core" }
elysian-ir = { path = "../elysian-ir" }
elysian-static = { path = "../elysian-static" }
elysian-shapes = { path = "../elysian-shapes" }
rust-gpu-bridge = { path = "../../../bevy-rust-gpu-project/crates/rust-gpu-bridge", features = ["glam"] }
image = "0.24.6"
tracing = "0.1.37"

rayon = { version = "1.7.0", optional = true }
num_cpus = { version = "1.16.0", optional = true }
