[package]
name = "elysian-image"
version = "0.1.0"
edition = "2021"

[features]
default = ["rayon"]
rayon = ["dep:rayon", "dep:num_cpus"]

[dependencies]
elysian-core = { path = "../elysian-core" }
elysian-ir = { path = "../elysian-ir" }
elysian-math = { path = "../elysian-math" }
elysian-interpreter = { path = "../elysian-interpreter" }
elysian-static = { path = "../elysian-static" }
elysian-shapes = { path = "../elysian-shapes" }
image = "0.24.6"
tracing = "0.1.37"
ron = "0.8.0"

rayon = { version = "1.7.0", optional = true }
num_cpus = { version = "1.16.0", optional = true }
