[package]
name = "elysian-ir"
version = "0.1.0"
edition = "2021"

[dependencies]
elysian-core = { path = "../elysian-core" }
elysian-math = { path = "../elysian-math" }
elysian-proc-macros = { path = "../elysian-proc-macros" }
elysian-decl-macros = { path = "../elysian-decl-macros" }

tracing = "0.1.37"
indexmap = "2.0.0"
linkme = "0.3.13"
