[package]
name = "elysian-naga"
version = "0.1.0"
edition = "2021"

[features]
default = []
print = []

[dependencies]
elysian-core = { path = "../elysian-core" }
elysian-shapes = { path = "../elysian-shapes" }
elysian-decl-macros = { path = "../elysian-decl-macros" }
elysian-proc-macros = { path = "../elysian-proc-macros" }

naga = "0.13.0"
indexmap = "2.0.0"
