[package]
name = "elysian-syn"
version = "0.1.0"
edition = "2021"

[dependencies]
elysian-core = { path = "../elysian-core" }
elysian-ir = { path = "../elysian-ir" }
elysian-math = { path = "../elysian-math" }
elysian-proc-macros = { path = "../elysian-proc-macros" }
elysian-interpreter = { path = "../elysian-interpreter" }

syn = { version = "2.0.25", features = ["full"]}
proc-macro2 = "1.0.64"
quote = "1.0.29"
prettyplease = "0.2.10"
