[package]
name = "test-image"
version = "0.1.0"
edition = "2021"

[build-dependencies]
elysian-core = { path = "../../crates/elysian-core" }
elysian-ir = { path = "../../crates/elysian-ir" }
elysian-static = { path = "../../crates/elysian-static" }
test-shapes = { path = "../test-shapes" }

[dependencies]
elysian = { path = "../.." }
test-shapes = { path = "../test-shapes" }
rust-gpu-bridge = { path = "../../../bevy-rust-gpu-project/crates/rust-gpu-bridge", features = ["glam"] }
linkme = "0.3.12"
viuer = "0.6.2"
