[package]
name = "test-image"
version = "0.1.0"
edition = "2021"

[build-dependencies]
elysian-core = { path = "../../crates/elysian-core" }
elysian-ir = { path = "../../crates/elysian-ir" }
elysian-interpreter = { path = "../../crates/elysian-interpreter" }
elysian-static = { path = "../../crates/elysian-static" }
test-shapes = { path = "../test-shapes" }

[dependencies]
elysian = { path = "../.." }
test-shapes = { path = "../test-shapes" }
linkme = "0.3.12"
image = "0.24.7"
viuer = "0.6.2"
