[package]
name = "test-shapes"
version = "0.1.0"
edition = "2021"

[dependencies]
elysian-core = { path = "../../crates/elysian-core" }
elysian-shapes = { path = "../../crates/elysian-shapes" }
elysian-proc-macros = { path = "../../crates/elysian-proc-macros" }
rust-gpu-bridge = { path = "../../../bevy-rust-gpu-project/crates/rust-gpu-bridge"}
