[package]
name = "test-shapes"
version = "0.1.0"
edition = "2021"

[dependencies]
elysian-core = { path = "../../crates/elysian-core" }
elysian-ir = { path = "../../crates/elysian-ir" }
elysian-math = { path = "../../crates/elysian-math" }
elysian-shapes = { path = "../../crates/elysian-shapes" }
elysian-text = { path = "../../crates/elysian-text" }
elysian-proc-macros = { path = "../../crates/elysian-proc-macros" }
